Responsive styles, fixed max width and shrinking font and margins on smaller devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,9 @@
 $error : #dc493a;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
 
 *{
-  font-family: Helvetica, sans-serif;
+  font-family: 'Roboto', Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 .container{
@@ -33,13 +35,21 @@ $error : #dc493a;
 }
 
 .info{
-  padding: 20px 0;
+  padding: 30px 10px 15px;
   border-bottom: 1px solid black;
+  @media(max-width: 400px){
+    padding-top: 10px;
+  }
 }
 
 .user-image{
   border-radius: 500px;
-  padding: 20px;
+  margin: 20px;
+  border: 1px solid #f0f0f0;
+}
+
+.icons{
+  padding: 10px;
 }
 
 .icon{
@@ -50,6 +60,7 @@ $error : #dc493a;
 }
 
 .icon-container{
+  cursor: pointer;
   display: flex;
   padding: 0;
   align-items: center;
@@ -65,19 +76,28 @@ $error : #dc493a;
 }
 
 .header-wrapper{
-  min-height: 60px;
-  margin-top: 20px;
+  min-height: 50px;
+  margin-top: 10px;
   display: flex;
   align-items: center;
 }
 
 .info-header{
   text-align: left;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  @media(max-width: 400px){
+    font-size: 1rem;
+  }
 }
 
 .info-blurb{
   padding: 0 20px;
+  @media(max-width: 400px){
+    padding: 0 10px;
+    p{
+      font-size: 0.8rem;
+    }
+  }
 }
 
 .contact{
@@ -120,6 +140,7 @@ textarea{
 }
 
 button{
+  cursor: pointer;
   border-radius: 0;
   padding: 7px;
   margin: 10px 0;
@@ -142,11 +163,14 @@ footer{
   width: 100%;
   height: 50px;
   border-top: 1px solid black;
+  background: white;
 }
 
 .social{
   width: 100%;
+  max-width: 500px;
   height: 100%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
